Release history for Class-Enumeration

1.2.0    Sun Oct 26 09:58:00 AM CET 2025
         - Improve documentation
         - Introduce new 'prefix' builder option

1.1.0    Tue Oct 21 07:19:58 AM CEST 2025
         - Improve documentation
         - Reduce redundant source code
         - Introduce new 'counter' builder option

1.0.3    Fri Oct 17 04:33:12 PM CEST 2025
         - Fix MIN_PERL_VERSION format

1.0.2    Fri Oct 17 12:36:48 PM CEST 2025
         - Remove _values() method and make values() method abstract

1.0.1    Fri Oct 17 11:05:58 AM CEST 2025
         - Improve documentation
         - Detect unknown builder options
         - Add state machine example
         - Store list of enum objects differently

1.0.0    Thu Oct 16 12:45:42 PM CEST 2025
         - Initial release