@@ -17,8 +17,10 @@ t/lib/ToastStatus.pm
 t/lib/TrafficLight.pm
 t/lib/TurnstileState.pm
 t/lib/TurnstileStateMachine.pm
+t/lib/VitalStatus.pm
 t/LockFlag.t
 t/ToastStatus.t
 t/TrafficLight.t
 t/TurnstileState.t
 t/TurnstileStateMachine.t
+t/VitalStatus.t
