@@ -1,0 +1,9 @@
+use strict;
+use warnings;
+
+package VitalStatus;
+
+use Exporter qw( import );
+use Class::Enumeration::Builder { predicate => 1 }, qw( dead alive );
+
+1
